--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,7 +10,7 @@ $netflix-color : #E50914;
 * {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
@@ -46,7 +46,7 @@ $netflix-color : #E50914;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  >a {
+  > a {
     text-decoration: none;
     color: black;
   }
@@ -58,16 +58,19 @@ $netflix-color : #E50914;
   height: 200px;
   width: 200px;
   box-shadow:$box-shadow-netflix;
+  border-radius: 2px;
   &__name{
     font-size: large;
     color: $netflix-color;
     font-weight: bold;
+    margin-bottom: 5px;
     @include truncate-text;
   }
   &__year {
     font-size: small;
     font-weight: bold;
     color: gray;
+    margin-top: 5px;
   }
   &__img{
     height: 150px;
@@ -76,7 +79,6 @@ $netflix-color : #E50914;
 }
 
 .movie-details {
-  box-shadow: $box-shadow-netflix;
   padding: 20px;
   display: flex;
   justify-content: center;
